# skeletons

./: LICENSE
.github/workflows/: python-poetry-skeleton.yaml  typescript-skeleton.yaml
python-poetry-skeleton/: .gitignore  pyproject.toml
python-poetry-skeleton/src/main/: main.py
python-poetry-skeleton/src/skeleton/: main.py  model.py
python-poetry-skeleton/src/test/: test_model.py
python-pycharm-poetry-skeleton/: .gitignore  pyproject.toml
python-pycharm-poetry-skeleton/src/main/: main.py
python-pycharm-poetry-skeleton/src/test/: test_model.py
typescript-vscode-skeleton/: .eslintignore  .eslintrc.cjs  .prettierrc  jest.config.cjs  package-lock.json  package.json  tsconfig.json
typescript-vscode-skeleton/src/main/: index.ts  model.ts
typescript-vscode-skeleton/src/test/: model.unit.test.ts
