[tool.poetry]
name = "python-pycharm-poetry-skeleton"
version = "0.1.0"
description = "Python project skeleton with Pycharm and Poetry"
authors = ["Charlie <kntrevita@163.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[tool.pytest.ini_options]
testpaths = ["src/test"]
pythonpath = ["src/main"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
